# chatwire

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  JOURNEY.md  PHILOSOPHY.md  REACTION-PANEL-SPEC.md  README.md  THEMING-HOOKS-SPEC.md  _version.py  bridge.py  chat_db.py  chat_send.py  chatwire_cli.py  chatwire_toolbar.py  config.py  conftest.py  contacts.py  echo_log.py  index.html  plugin_state.py  prefix.py  pyproject.toml  read_state.py  verify.py  whitelist.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai-loop.yml  ci.yml  docker.yml  mobile-preview.yml  publish.yml
chatwire-plugins/: README.md  chatwire-apprise.md  chatwire-ha.md  chatwire-ntfy.md  chatwire-telegram.md  chatwire-xmpp.md  plugins.json
chatwire-plugins/chatwire-apprise/: pyproject.toml
chatwire-plugins/chatwire-apprise/chatwire_apprise/: __init__.py  migrate.py
chatwire-plugins/chatwire-example/: pyproject.toml
chatwire-plugins/chatwire-example/chatwire_example/: __init__.py
chatwire-plugins/chatwire-ha/: README.md  pyproject.toml
chatwire-plugins/chatwire-ha/chatwire_ha/: __init__.py
chatwire-plugins/chatwire-mqtt/: README.md  pyproject.toml
chatwire-plugins/chatwire-mqtt/chatwire_mqtt/: __init__.py
chatwire-plugins/chatwire-telegram/: pyproject.toml
chatwire-plugins/chatwire-telegram/chatwire_telegram/: __init__.py
chatwire-plugins/chatwire-theme-example/: pyproject.toml
chatwire-plugins/chatwire-theme-example/chatwire_theme_example/: __init__.py
chatwire-plugins/chatwire-theme-rosepine/: pyproject.toml
chatwire-plugins/chatwire-theme-rosepine/chatwire_theme_rosepine/: __init__.py
chatwire-plugins/chatwire-theme-template/: pyproject.toml
chatwire-plugins/chatwire-theme-template/chatwire_theme_template/: __init__.py
chatwire-plugins/chatwire-webhook/: pyproject.toml
chatwire-plugins/chatwire-webhook/chatwire_webhook/: __init__.py
chatwire-plugins/chatwire-xmpp/: README.md  pyproject.toml
chatwire-plugins/chatwire-xmpp/chatwire_xmpp/: __init__.py
docs/: AUDIT-REPORT.md  HANDOFF-wave3.md  HANDOFF-wave4.md  HANDOFF-wave5.md  HANDOFF.md  INSTALL_TESTING.md  MOBILE_DISTRIBUTE.md  MOBILE_NAV_SPEC.md  OPEN_SOURCE_PLAN.md  PHASE12-THEMING.md  PLUGIN_DEVELOPMENT.md  PRIVACY.md  QA-CHECKLIST.md  REFERENCE_INSTALL.md  TODO_PUBLIC_PRESENCE.md  discord-bot-plan.md  greenfield-analysis.md  greenfield-distribution-and-migration.md  index.html  master-migration-plan.md  messaging-and-positioning.md  onboarding.md  plugin-arch.md  repo-split-plan.md  secrets-setup.md
docs/admin/: unlock-apps-script.js  unlock-setup.md
docs/examples/: bubbly-pink-theme.json  compact-mono-theme.json  github-dark-theme.json
docs/plugins/: content-filter.md  export.md  favorites.md  ha.md  mcp.md  mqtt.md  popout.md  smart-notifications.md  stats.md  tinfoil.md  xmpp.md
docs/wiki/: architecture.md  compatibility.md  disk-layout.md  install-uninstall.md  permissions.md  plugin-development.md  theme-format.md
integrations/: __init__.py  base.py  sandbox.py
integrations/content_filter/: __init__.py
integrations/content_filter/data/: body.json  dietary.json  drugs.json  gambling.json  gaming.json  gossip.json  money.json  politics.json  profanity.json  religion.json  sex.json  social_media.json
integrations/mcp/: __init__.py  fts_index.py
integrations/rules/: __init__.py  cron.py  dsl.py
integrations/stats/: __init__.py
integrations/tinfoil/: __init__.py
integrations/web/: __init__.py
integrations/webhook/: __init__.py
migrations/: 0001_initial.py  0002_integration_split.py  0003_state_dir_paths.py  0004_web_theme.py  __init__.py
scripts/: chain-waves.sh  chatwire-loop.sh  check-permissions.sh  gen_pwa_icons.py  gen_schemes_css.py  gen_signing_key.py  install.sh  migrate_color_tokens.py  uninstall.sh  wait_pypi.py
templates/launchd/: bridge.plist.template  keepawake.plist.template  web.plist.template
tests/: test_accent_color.py  test_accessibility.py  test_advanced_settings.py  test_anti_spam.py  test_api_keys.py  test_api_v1.py  test_attachment_cache.py  test_auth.py  test_automations_api.py  test_cli_init.py  test_config.py  test_content_filter.py  test_custom_css.py  test_doctor.py  test_edited_messages.py  test_export.py  test_ha_integration.py  test_hiatus_reminder_settings.py  test_img_cache_warmer.py  test_lockout_hardening.py  test_marketplace.py  test_mcp.py  test_mcp_sse.py  test_media_gallery.py  test_mqtt_integration.py  test_multi_instance.py  test_on_send_rules.py  test_plugin_state.py  test_plugin_themes.py  test_popout.py  test_prefix.py  test_push_notifications.py  test_rules_dsl.py  test_rules_engine.py  test_schedule_rules.py  test_sms_reactions.py  test_sounds.py  test_status.py  test_theme_loader.py  test_theme_override.py  (+11 more)
web/: api_keys.py  api_ui.py  api_v1.py  auth.py  log_stream.py  main.py  mcp_sse.py  plugin_audit.py  probes.py  push.py  registry.py  service_control.py  setup_wizard.py  sms_reactions.py  theme_loader.py  themes.py  version_check.py  whitelist.py
web/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/frontend/e2e/: a11y.spec.ts  auth.spec.ts  chat.spec.ts  login-flow.spec.ts  mocks.ts  settings.spec.ts
web/frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  main.tsx  store.ts  test-setup.ts  vite-env.d.ts
web/static/: legacy.html  manifest.json  style.css  sw.js  update-check.js
web/static/sounds/: LICENSE
web/static/themes/: THEMES.md  _bridge.css  catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  default.css  dracula.css  github-dark.css  (+14 more)
web/templates/: _appearance_card.html  _contact.html  _conversation.html  _conversations.html  _favorites_rows.html  _history_page.html  _login.html  _messages.html  _password_card.html  _plugin_sections.html  _plugins_browse.html  _popout.html  _settings.html  _stats_report.html  _whitelist_rows.html  index.html
(+74 files in other folders)
