[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatwire-apprise"
version = "1.0.0"
description = "Multi-service push notifications for chatwire via Apprise (ntfy, Slack, Pushover, …)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Allen Bina" }]
keywords = ["chatwire", "apprise", "notifications", "imessage", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "apprise>=1.7",
]

[project.entry-points."chatwire.integrations"]
chatwire_apprise = "chatwire_apprise:AppriseIntegration"
