[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatwire-ha"
version = "1.0.0"
description = "Home Assistant integration for chatwire — trigger HA automations/scenes via iMessage keywords."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Allen Bina" }]
keywords = ["chatwire", "home-assistant", "imessage", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
]

[project.entry-points."chatwire.integrations"]
chatwire_ha = "chatwire_ha:HAIntegration"
