[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatwire-mqtt"
version = "1.0.0"
description = "Publish every inbound iMessage to an MQTT broker (Home Assistant, Node-RED, etc.)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Allen Bina" }]
keywords = ["chatwire", "mqtt", "imessage", "home-assistant", "node-red", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "paho-mqtt>=1.6",
]

[project.entry-points."chatwire.integrations"]
chatwire_mqtt = "chatwire_mqtt:MQTTIntegration"
