[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatwire-webhook"
version = "1.0.0"
description = "POST every inbound iMessage to a webhook URL. The reference chatwire integration."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Allen Bina" }]
keywords = ["chatwire", "webhook", "imessage", "zapier", "n8n", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24",
]

[project.entry-points."chatwire.integrations"]
chatwire_webhook = "chatwire_webhook:WebhookIntegration"
