[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatwire-xmpp"
version = "1.0.0"
description = "XMPP relay integration for chatwire — bridge iMessage ↔ XMPP (1:1, whitelisted contacts)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Allen Bina" }]
keywords = ["chatwire", "xmpp", "jabber", "imessage", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "slixmpp>=1.8",
]

[project.entry-points."chatwire.integrations"]
chatwire_xmpp = "chatwire_xmpp:XMPPIntegration"
